// Copyright 2021 Datafuse Labs
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// The identifier of a database by name. Names can be changed.
// There is no guarantee that two get-database request by name will return the
// same instance.

syntax = "proto3";

package databend_proto;

// IndexMeta is a container of all non-identity information.
message IndexMeta {
  enum IndexType {
    None = 0;
    AGGREGATING = 1;
    JOIN = 2;
  }

  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  // The table_id index belong to
  uint64 table_id = 1;

  IndexType index_type = 2;

  // The time index created.
  string created_on = 3;

  // The time index dropped.
  optional string dropped_on = 4;

  // The index based query string
  string query = 5;

  // The time index updated.
  optional string updated_on = 6;

  // if true, index will create after data written to databend,
  // no need execute refresh index manually.
  bool sync_creation = 7;

  string original_query = 8;
}

message MarkedDeletedIndexMeta {
  enum MarkedDeletedIndexType {
    AGGREGATING = 0;
    INVERTED = 1;
  }

  uint64 ver = 100;
  uint64 min_reader_ver = 101;
  string dropped_on = 1;
  MarkedDeletedIndexType index_type = 2;
}